[ios] Fixes Collections layout issues when showing context menus.

Rotating or exiting multitasking while a context menu was visible would
result in the Collections tableviews being offset within the bubble.
Fixes this bug by forcing the tableview to fill its parent before
running the layout pass.

BUG=845534

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I72f1ab1d33d2b8ca22a32c9161e6eeaf561c7844
Reviewed-on: https://chromium-review.googlesource.com/1067866
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560772}
Former-commit-id: aa0671241e4fa544d9a7d3709348a2227db5f722